[package]
name = "tokio-bincode"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
version = "0.2.0"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tokio-bincode"
repository = "https://github.com/LucioFranco/tokio-bincode"
description = "Bincode based `tokio-codec` adapter."
keywords = ["networking", "bincode", "futures"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[features]
big_data = []

[dependencies]
bytes = "0.5"
tokio-util = { version = "0.3", features = ["codec"] }

bincode = "1.0"
serde = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros", "uds"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
